# otus-task-cpp-pro

./: CMakeLists.txt  README.md  build_counter.hpp  build_index_gen  hw.cpp  hw.hpp.in  main.cpp
src/: build_counter.hpp  hw.cpp
